# OpenMitAIbot

./: .env.example  .gitignore  .isort.cfg  INSTALL_SERVER.md  README.md  VOICE_DEBUG.md  VOICE_ID_VS_FILE_ID.md  fix_api_config.md  main.py  pyproject.toml  start_bot.bat  start_bot_service.bat  start_rvc.bat
rvc_service/: README.md  __init__.py  main.py  requirements.txt  start.bat  start.sh
settings/: main.py
src/: prompt.py
src/bot/: __init__.py  __main__.py  containers.py  main.py
src/bot/db/: connection.py  models.py
src/bot/exeptions/: __init__.py  exeptions.py
src/bot/handlers/: __init__.py  start.py
src/bot/handlers/admin/: ban.py  mailing.py
src/bot/handlers/config/: minimax_voice.py  setbio.py  voice_mode.py
src/bot/handlers/users/: ask.py  help.py  mita.py  reset_history.py  start.py  subscription.py  voice.py
src/bot/locales/en/LC_MESSAGES/: mita-translate.ftl
src/bot/locales/ru/LC_MESSAGES/: mita-translate.ftl
src/bot/middlewire/: i18nsafemiddleware.py
src/bot/repositories/: __init__.py  user_repo.py
src/bot/services/: __init__.py  service.py
src/bot/services/model_services/: __init__.py  ai_service.py  user_service.py
src/bot/utils/: minimax_voice.py  shutdown.py  startup.py  voice_utils.py
src/handlers/: __init__.py
src/settings/: main.py
src/utils/: shutdown.py  startup.py
test/DB/: test.py
test/llm/: clientmcp.py  langch.py  srvermcp.py  test.py  test_cache.py
test/voice/: test.py
