[project]
name = "mitaibot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.16"
dependencies = [
    "aiogram>=3.21.0",
    "aiogram-i18n>=1.4",
    "beanie>=2.0.0",
    "dependency>=0.0.3",
    "dependency-injector>=4.48.1",
    "isort>=6.0.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.10.1",
    "pymongo>=4.14.0",
]
